force-app/main/default/objects/Traverse_Form__c/Traverse_Form__c.object-meta.xml
<CustomObject>
    <description>Record that holds all data surrounding the Form design of a Traverse form</description>
    <label>Traverse Form</label>
    <nameField>
        <displayFormat>TF-{00000000}</displayFormat>
        <label>Traverse Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Traverse Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>