force-app/main/default/objects/Traverse_Form__c/fields/Change_Correction_Location__c.field-meta.xml
<CustomField>
    <fullName>Change_Correction_Location__c</fullName>
    <label>Change/Correction Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>