force-app/main/default/objects/Traverse_Form__c/fields/Change_Correction_Needed__c.field-meta.xml
<CustomField>
    <fullName>Change_Correction_Needed__c</fullName>
    <label>Change/Correction Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>