force-app/main/default/objects/Traverse_Form__c/fields/Collaboration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Notes__c</fullName>
    <label>Collaboration Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>