force-app/main/default/objects/Traverse_Form__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>TextArea</type>
</CustomField>