force-app/main/default/objects/Traverse_Form__c/fields/Discovery_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Notes__c</fullName>
    <label>Discovery Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>