force-app/main/default/objects/Traverse_Form__c/fields/Divide_Collaborate_Time__c.field-meta.xml
<CustomField>
    <fullName>Divide_Collaborate_Time__c</fullName>
    <formula>Divide_Collaborate_Time_By__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Divide Collaborate Time</label>
    <type>Checkbox</type>
</CustomField>