force-app/main/default/objects/Traverse_Form__c/fields/Divide_Collaborate_Time_By__c.field-meta.xml
<CustomField>
    <fullName>Divide_Collaborate_Time_By__c</fullName>
    <label>Divide Collaborate Time By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>