force-app/main/default/objects/Traverse_Form__c/fields/Exact_Match__c.field-meta.xml
<CustomField>
    <fullName>Exact_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exact Match</label>
    <type>Checkbox</type>
</CustomField>