force-app/main/default/objects/Traverse_Form__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <label>Form Name</label>
    <type>TextArea</type>
</CustomField>