force-app/main/default/objects/Traverse_Form__c/fields/Production_Update_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Production_Update_End_Time__c</fullName>
    <label>Update Production End Time</label>
    <type>DateTime</type>
</CustomField>