force-app/main/default/objects/Traverse_Form__c/fields/Quality_Check_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Notes__c</fullName>
    <label>Quality Check Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>