force-app/main/default/objects/Traverse_Form__c/fields/Quality_Check_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Start_Time__c</fullName>
    <label>Quality Check Start Time</label>
    <type>DateTime</type>
</CustomField>