force-app/main/default/objects/Traverse_Form__c/fields/Revision_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Revision_End_Time__c</fullName>
    <label>Revision End Time</label>
    <type>DateTime</type>
</CustomField>