force-app/main/default/objects/Traverse_Form__c/fields/Revision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Revision_Notes__c</fullName>
    <label>Design/Revision Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>