force-app/main/default/objects/Traverse_Form__c/fields/Revision_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Revision_Start_Time__c</fullName>
    <label>Revision Start Time</label>
    <type>DateTime</type>
</CustomField>