force-app/main/default/objects/Traverse_Form__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
                <default>true</default>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Collaborate</fullName>
            </value>
            <value>
                <fullName>Revise Form</fullName>
                <label>Design/Revise Form</label>
            </value>
            <value>
                <fullName>Quality Check</fullName>
            </value>
            <value>
                <fullName>Update Production</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>