force-app/main/default/objects/Traverse_Form__c/fields/Time_in_Quality_Check_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Quality_Check_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time in Quality Check (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>