force-app/main/default/objects/Traverse_Form__c/fields/Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Worked__c</fullName>
    <formula>Total_Minutes_Worked__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>