force-app/main/default/objects/Traverse_Form__c/fields/Total_Minutes_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes_Worked__c</fullName>
    <formula>Time_in_Discovery_Minutes__c + Time_in_Collaborate_Minutes__c + Time_in_Revision_Minutes__c +  Time_in_Quality_Check_Minutes__c + Time_in_Update_Production_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Minutes Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>