force-app/main/default/objects/Traverse_Form__c/fields/Update_Production_Notes__c.field-meta.xml
<CustomField>
    <fullName>Update_Production_Notes__c</fullName>
    <label>Update Production Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>