force-app/main/default/objects/Traverse_Form__c/fields/Update_Production_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Update_Production_Start_Time__c</fullName>
    <label>Update Production Start Time</label>
    <type>DateTime</type>
</CustomField>